# ds

./: .gitignore  CMakeLists.txt  ci.sh  readme.md
app/: main.c
app/linklist/: CMakeLists.txt  main.c
app/list/: CMakeLists.txt  clink.c  common.c  dclink.c  link.c  main.c  noise_reduction_link.c  se.c  simple_clink.c  simple_dclink.c  simple_link.c  simple_sq.c  sq.c  sq1.c
app/noise_reduction/: CMakeLists.txt  main.c
app/stack/: CMakeLists.txt  conversion.c  match.c
app/tree/: CMakeLists.txt  bi.c  ht.c
include/calc/: calc.h
include/code/: code.h
include/graph/: mat.h
include/interface/: comparator.h
include/linklist/: linklist.h
include/list/: clink.h  dclink.h  link.h  list.h  se.h  sq.h
include/queue/: link.h  sq.h
include/stack/: link.h  sq.h
include/tree/: bi.h
src/: CMakeLists.txt
src/calc/: calc.c
src/graph/: CMakeLists.txt  mat.c
src/linklist/: CMakeLists.txt  linklist.c
src/list/: CMakeLists.txt  clink.c  dclink.c  link.c  list.c  se.c  sq.c
src/queue/: CMakeLists.txt  link.c  sq.c
src/stack/: CMakeLists.txt  link.c  sq.c
src/tree/: CMakeLists.txt  bi.c
tests/: CMakeLists.txt  common.c  simple.cpp
tests/graph/: mat.cpp
tests/list/: clink.cpp  dclink.cpp  link.cpp  sq.cpp
tests/queue/: link.cpp  sq.cpp
tests/stack/: link.cpp  sq.cpp
tests/tree/: bi.cpp
